feat(ui): Display current robot time in NTPConnectivity view
