# backend/lib/webserver/doc/NTPClientRouter.openapi.json
@@ -1,30 +1,39 @@
 {
-  "/api/v2/ntpclient/state": {
+  "/api/v2/ntpclient/status": {
     "get": {
       "tags": [
         "NTP"
       ],
-      "summary": "Get NTPClient state",
+      "summary": "Get NTPClient status",
       "responses": {
         "200": {
-          "description": "The NTPClients current state.",
+          "description": "The NTPClient's current status.",
           "content": {
             "application/json": {
               "schema": {
-                "oneOf": [
-                  {
-                    "$ref": "#/components/schemas/ValetudoNTPClientDisabledState"
+                "type": "object",
+                "properties": {
+                  "state": {
+                    "type": "object",
+                    "oneOf": [
+                      {
+                        "$ref": "#/components/schemas/ValetudoNTPClientDisabledState"
+                      },
+                      {
+                        "$ref": "#/components/schemas/ValetudoNTPClientEnabledState"
+                      },
+                      {
+                        "$ref": "#/components/schemas/ValetudoNTPClientErrorState"
+                      },
+                      {
+                        "$ref": "#/components/schemas/ValetudoNTPClientSyncedState"
+                      }
+                    ]
                   },
-                  {
-                    "$ref": "#/components/schemas/ValetudoNTPClientEnabledState"
-                  },
-                  {
-                    "$ref": "#/components/schemas/ValetudoNTPClientErrorState"
-                  },
-                  {
-                    "$ref": "#/components/schemas/ValetudoNTPClientSyncedState"
+                  "robotTime": {
+                    "type": "string"
                   }
-                ]
+                }
               }
             }
           }
